--- a/lesson1/style.css
+++ b/lesson1/style.css
@@ -4,7 +4,7 @@ body {
 }
 h1  {
     font-size: 40px; 
-    color: peru;
+    color: rgb(204, 186, 169);
     text-align: center;
     border: 5px solid royalblue;
 }
