--- a/DZ1/style.css
+++ b/DZ1/style.css
@@ -1,149 +1,148 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .container {
-    width: 1920px;
-    min-height: 100vh;
-    margin: 0 auto;
+  width: 1920px;
+  min-height: 100vh;
+  margin: 0 auto;
 }
 header {
-    height: 60px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background: #FFFFFF;
-    box-shadow: 0px 15px 35px rgba(0, 0, 0, 0.1);
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #ffffff;
+  box-shadow: 0px 15px 35px rgba(0, 0, 0, 0.1);
 }
 h1 {
-    position: absolute;
-width: 336px;
-height: 49px;
-left: 920px;
-top: 100px;
-
-font-family: Georgia, 'Times New Roman', Times, serif;
-font-style: normal;
-font-weight: 600;
-font-size: 40px;
-line-height: 49px;
+  position: absolute;
+  width: 336px;
+  height: 49px;
+  left: 920px;
+  top: 100px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 49px;
 }
 .vid {
-    display: flex;
+  display: flex;
 }
 .vid-flower {
-    display: flex;
+  display: flex;
 }
 .vid-flower-all1 {
-    position: absolute;
-    width: 150px;
-height: 150px;
-left: 630px;
-top: 255px;
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  left: 630px;
+  top: 255px;
 }
 .vid-flower-all2 {
-    position: absolute;
-width: 150px;
-height: 150px;
-left: 1023px;
-top: 255px;
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  left: 1023px;
+  top: 255px;
 }
 .vid-flower-all3 {
-    position: absolute;
-width: 150px;
-height: 150px;
-left: 1419px;
-top: 255px;
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  left: 1419px;
+  top: 255px;
 }
 .vid-text {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .info-text {
-    width: 100%;
-    border-radius: 70px;
-    padding: 0px;
-    text-align: center    
+  width: 100%;
+  border-radius: 70px;
+  padding: 0px;
+  text-align: center;
 }
 .h2 {
-    margin-top:20px;
+  margin-top: 20px;
   border-top: 3px solid rgb(170, 97, 97);
-  height:50%;
+  height: 50%;
 }
 .line {
-    position: absolute;
-   width: 1137.5px;
-   left: 767px;
-top: 579px;
-height: 3px;
-background-color: rgb(238, 212, 202);
-max-width: 700px;
-margin: 0 auto;
+  position: absolute;
+  width: 1137.5px;
+  left: 767px;
+  top: 579px;
+  height: 3px;
+  background-color: rgb(238, 212, 202);
+  max-width: 700px;
+  margin: 0 auto;
 }
 .text-stix-style {
-    position: absolute;
-border-radius: 70px;
-padding: 1px 700px 80px;
-height: 81px;
-left: 100px;
-top: 630px;
-margin: auto;
-font-family: Montserrat;
-font-style: italic;
-font-weight: 300;
-font-size: 23px;
-line-height: 98%;
-text-align: center;
-color: #FF445A;
+  position: absolute;
+  border-radius: 70px;
+  padding: 1px 700px 80px;
+  height: 81px;
+  left: 100px;
+  top: 630px;
+  margin: auto;
+  font-family: Montserrat;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 23px;
+  line-height: 98%;
+  text-align: center;
+  color: #ff445a;
 }
 .line2 {
-    position: absolute;
-   width: 1137.5px;
-   left: 767px;
-top: 729px;
-height: 3px;
-background-color: rgb(238, 212, 202);
-max-width: 700px;
-margin: 0 auto;
+  position: absolute;
+  width: 1137.5px;
+  left: 767px;
+  top: 729px;
+  height: 3px;
+  background-color: rgb(238, 212, 202);
+  max-width: 700px;
+  margin: 0 auto;
 }
 .test-stix2 {
-    position: absolute;
-    width: 284px;
-    height: 254px;
-left: 626px;
-top: 795px;
-font-family: Montserrat;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 150%;
-text-align: left;
-color: #424242;
+  position: absolute;
+  width: 284px;
+  height: 254px;
+  left: 626px;
+  top: 795px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 150%;
+  text-align: left;
+  color: #424242;
 }
 .byket {
-    position: absolute;
-width: 244px;
-height: 282px;
-left: 1266px;
-top: 796px;
-background: url(byket.png);
-filter: drop-shadow(30px 40px 40px rgba(255, 181, 181, 0.5));
+  position: absolute;
+  width: 244px;
+  height: 282px;
+  left: 1266px;
+  top: 796px;
+  background: url(byket.png);
+  filter: drop-shadow(30px 40px 40px rgba(255, 181, 181, 0.5));
 }
 footer {
-    position: absolute;
-    width: 1920px;
-height: 80px;
-left: 100px;
-top: 1240px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #FFB5B5;
-    box-sizing: border-box;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  width: 1920px;
+  height: 80px;
+  left: 100px;
+  top: 1240px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffb5b5;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
